# trae_test

./: .gitignore  README.md  pyproject.toml
examples/: sample_transcript.json
src/classroom_eval/: __init__.py  active_learning.py  cli.py  entropy.py  models.py  pipeline.py  samplers.py  slicing.py
tests/: test_active_learning.py  test_entropy.py  test_slicing.py
